使用 Colab 创建而成

--- a/chattts_webui_mix.ipynb
+++ b/chattts_webui_mix.ipynb
@@ -1,65 +1,102 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "provenance": [],
-   "gpuType": "T4"
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "gpuType": "T4"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "accelerator": "GPU"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  },
-  "language_info": {
-   "name": "python"
-  },
-  "accelerator": "GPU"
- },
- "cells": [
-  {
-   "cell_type": "markdown",
-   "source": [
-    "> 🌟 如果你觉得 ChatTTS 和 ChatTTS_colab 项目对你有帮助，请访问以下链接给它们点个星星吧！🌟\n",
-    "\n",
-    "- [ChatTTS 项目](https://github.com/2noise/ChatTTS)\n",
-    "\n",
-    "- [ChatTTS_colab 项目](https://github.com/6drf21e/ChatTTS_colab)\n",
-    "\n",
-    "感谢你的支持！\n",
-    "\n",
-    "# 运行方法\n",
-    "\n",
-    "- 点击菜单栏的--代码执行程序--全部运行即可\n",
-    "- 执行后在下方的日志中找到类似\n",
-    "\n",
-    "  Running on public URL: https://**************.gradio.live  <-这个就是可以访问的公网地址\n",
-    "\n",
-    "安装包的时候提示要重启 请点**\"否\"**"
-   ],
-   "metadata": {
-    "id": "Xo3k5XsTzWK6"
-   }
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "!git clone -q https://github.com/6drf21e/ChatTTS_colab\n",
-    "%cd ChatTTS_colab\n",
-    "!git clone -q https://github.com/2noise/ChatTTS\n",
-    "%cd ChatTTS\n",
-    "!git checkout -q e6412b1\n",
-    "%cd ..\n",
-    "!mv ChatTTS abc\n",
-    "!mv abc/* /content/ChatTTS_colab/\n",
-    "!pip install -q omegaconf vocos vector_quantize_pytorch gradio cn2an pypinyin openai jieba WeTextProcessing python-dotenv\n",
-    "# 启动 Gradio 有公网地址\n",
-    "!python webui_mix.py --share\n"
-   ],
-   "metadata": {
-    "id": "hNDl-5muR77-"
-   },
-   "execution_count": null,
-   "outputs": []
-  }
- ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> 🌟 如果你觉得 ChatTTS 和 ChatTTS_colab 项目对你有帮助，请访问以下链接给它们点个星星吧！🌟\n",
+        "\n",
+        "- [ChatTTS 项目](https://github.com/2noise/ChatTTS)\n",
+        "\n",
+        "- [ChatTTS_colab 项目](https://github.com/6drf21e/ChatTTS_colab)\n",
+        "\n",
+        "感谢你的支持！\n",
+        "\n",
+        "# 运行方法\n",
+        "\n",
+        "- 点击菜单栏的--代码执行程序--全部运行即可\n",
+        "- 执行后在下方的日志中找到类似\n",
+        "\n",
+        "  Running on public URL: https://**************.gradio.live  <-这个就是可以访问的公网地址\n",
+        "\n",
+        "安装包的时候提示要重启 请点**\"否\"**"
+      ],
+      "metadata": {
+        "id": "Xo3k5XsTzWK6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone -q https://github.com/6drf21e/ChatTTS_colab\n",
+        "%cd ChatTTS_colab\n",
+        "!git clone -q https://github.com/2noise/ChatTTS\n",
+        "%cd ChatTTS\n",
+        "!git checkout -q e6412b1\n",
+        "%cd ..\n",
+        "!mv ChatTTS abc\n",
+        "!mv abc/* /content/ChatTTS_colab/\n",
+        "!pip install -q omegaconf vocos vector_quantize_pytorch gradio cn2an pypinyin openai jieba WeTextProcessing python-dotenv pybase16384\n",
+        "# 启动 Gradio 有公网地址\n",
+        "!python webui_mix.py --share\n"
+      ],
+      "metadata": {
+        "id": "hNDl-5muR77-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python webui_mix.py --share"
+      ],
+      "metadata": {
+        "id": "YmSy9gL3v_rR",
+        "outputId": "d3500326-42e4-44dc-b76f-e27aa6080852",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2025-03-18 05:45:40.284736: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+            "E0000 00:00:1742276740.636873    5159 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "E0000 00:00:1742276740.719999    5159 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "2025-03-18 05:45:41.483877: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+            "Loading ChatTTS model...\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/ChatTTS_colab/webui_mix.py\", line 46, in <module>\n",
+            "    chat = load_chat_tts_model(source=args.source, local_path=args.local_path)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/ChatTTS_colab/tts_model.py\", line 25, in load_chat_tts_model\n",
+            "    chat.load_models(source=source, force_redownload=force_redownload, custom_path=local_path, compile=False)\n",
+            "    ^^^^^^^^^^^^^^^^\n",
+            "AttributeError: 'Chat' object has no attribute 'load_models'. Did you mean: 'download_models'?\n"
+          ]
+        }
+      ]
+    }
+  ]
 }
