使用 Colab 创建而成

--- a/chattts_webui_mix.ipynb
+++ b/chattts_webui_mix.ipynb
@@ -64,39 +64,13 @@
     {
       "cell_type": "code",
       "source": [
-        "!python webui_mix.py --share"
+        "!pip install --upgrade tensorflow"
       ],
       "metadata": {
-        "id": "YmSy9gL3v_rR",
-        "outputId": "d3500326-42e4-44dc-b76f-e27aa6080852",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "YmSy9gL3v_rR"
       },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2025-03-18 05:45:40.284736: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-            "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-            "E0000 00:00:1742276740.636873    5159 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-            "E0000 00:00:1742276740.719999    5159 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-            "2025-03-18 05:45:41.483877: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-            "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-            "Loading ChatTTS model...\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/content/ChatTTS_colab/webui_mix.py\", line 46, in <module>\n",
-            "    chat = load_chat_tts_model(source=args.source, local_path=args.local_path)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/content/ChatTTS_colab/tts_model.py\", line 25, in load_chat_tts_model\n",
-            "    chat.load_models(source=source, force_redownload=force_redownload, custom_path=local_path, compile=False)\n",
-            "    ^^^^^^^^^^^^^^^^\n",
-            "AttributeError: 'Chat' object has no attribute 'load_models'. Did you mean: 'download_models'?\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
