使用 Colab 创建而成

--- a/chattts_webui_mix.ipynb
+++ b/chattts_webui_mix.ipynb
@@ -51,7 +51,7 @@
         "%cd ..\n",
         "!mv ChatTTS abc\n",
         "!mv abc/* /content/ChatTTS_colab/\n",
-        "!pip install -q omegaconf vocos vector_quantize_pytorch gradio cn2an pypinyin openai jieba WeTextProcessing python-dotenv pybase16384\n",
+        "!pip install -q omegaconf vocos vector_quantize_pytorch gradio cn2an pypinyin openai jieba WeTextProcessing python-dotenv\n",
         "# 启动 Gradio 有公网地址\n",
         "!python webui_mix.py --share\n"
       ],
@@ -64,13 +64,252 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install --upgrade tensorflow"
+        "!python webui_mix.py --share"
       ],
       "metadata": {
-        "id": "YmSy9gL3v_rR"
+        "id": "bpNt9uloF7NW",
+        "outputId": "0864fe03-a2b1-4a35-b123-f2b395674932",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2025-03-19 06:35:45.703333: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+            "E0000 00:00:1742366145.968472    1771 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "E0000 00:00:1742366146.039233    1771 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "2025-03-19 06:35:46.621222: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+            "Loading ChatTTS model...\n",
+            "INFO:ChatTTS.core:Download from HF: https://huggingface.co/2Noise/ChatTTS\n",
+            "Fetching 12 files:   0% 0/12 [00:00<?, ?it/s]\n",
+            "DVAE.pt:   0% 0.00/27.7M [00:00<?, ?B/s]\u001b[A\n",
+            "\n",
+            "GPT.pt:   0% 0.00/901M [00:00<?, ?B/s]\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "spk_stat.pt: 100% 4.26k/4.26k [00:00<00:00, 17.4MB/s]\n",
+            "\n",
+            "\n",
+            "\n",
+            "tokenizer.pt:   0% 0.00/337k [00:00<?, ?B/s]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "tokenizer.pt: 100% 337k/337k [00:00<00:00, 12.4MB/s]\n",
+            "\n",
+            "\n",
+            "\n",
+            "Decoder.pt:   0% 0.00/104M [00:00<?, ?B/s]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "decoder.yaml: 100% 117/117 [00:00<00:00, 485kB/s]\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "DVAE_full.pt:   0% 0.00/60.4M [00:00<?, ?B/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "DVAE.pt:  38% 10.5M/27.7M [00:00<00:00, 65.1MB/s]\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "dvae.yaml:   0% 0.00/143 [00:00<?, ?B/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "Vocos.pt:  19% 10.5M/54.4M [00:00<00:00, 62.1MB/s]\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "dvae.yaml: 100% 143/143 [00:00<00:00, 133kB/s]\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "gpt.yaml: 100% 346/346 [00:00<00:00, 2.21MB/s]\n",
+            "\n",
+            "\n",
+            "\n",
+            "Decoder.pt:  10% 10.5M/104M [00:00<00:01, 61.3MB/s]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "path.yaml: 100% 309/309 [00:00<00:00, 1.60MB/s]\n",
+            "\n",
+            "\n",
+            "GPT.pt:   2% 21.0M/901M [00:00<00:13, 65.6MB/s]\u001b[A\u001b[A\n",
+            "DVAE.pt:  76% 21.0M/27.7M [00:00<00:00, 61.2MB/s]\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "Vocos.pt:  39% 21.0M/54.4M [00:00<00:00, 59.9MB/s]\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "DVAE_full.pt:  17% 10.5M/60.4M [00:00<00:01, 36.3MB/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "vocos.yaml: 100% 460/460 [00:00<00:00, 2.09MB/s]\n",
+            "\n",
+            "\n",
+            "\n",
+            "DVAE.pt: 100% 27.7M/27.7M [00:00<00:00, 61.0MB/s]\n",
+            "Fetching 12 files:   8% 1/12 [00:00<00:06,  1.63it/s]\n",
+            "\n",
+            "GPT.pt:   5% 41.9M/901M [00:00<00:08, 100MB/s] \u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "Vocos.pt:  58% 31.5M/54.4M [00:00<00:00, 60.9MB/s]\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "Decoder.pt:  30% 31.5M/104M [00:00<00:01, 60.5MB/s]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:   6% 52.4M/901M [00:00<00:08, 95.8MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "DVAE_full.pt:  35% 21.0M/60.4M [00:00<00:00, 46.2MB/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "Vocos.pt:  77% 41.9M/54.4M [00:00<00:00, 67.0MB/s]\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:   7% 62.9M/901M [00:00<00:09, 92.5MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "DVAE_full.pt:  52% 31.5M/60.4M [00:00<00:00, 56.6MB/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "Decoder.pt:  40% 41.9M/104M [00:00<00:01, 60.5MB/s]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "Vocos.pt:  96% 52.4M/54.4M [00:00<00:00, 68.9MB/s]\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "Vocos.pt: 100% 54.4M/54.4M [00:00<00:00, 60.5MB/s]\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "DVAE_full.pt:  87% 52.4M/60.4M [00:00<00:00, 77.6MB/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:   9% 83.9M/901M [00:00<00:08, 91.4MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "DVAE_full.pt: 100% 60.4M/60.4M [00:00<00:00, 66.6MB/s]\n",
+            "Fetching 12 files:  17% 2/12 [00:01<00:05,  1.70it/s]\n",
+            "\n",
+            "GPT.pt:  12% 105M/901M [00:01<00:07, 112MB/s]  \u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "Decoder.pt:  81% 83.9M/104M [00:01<00:00, 91.4MB/s]\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  14% 126M/901M [00:01<00:06, 128MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "Decoder.pt: 100% 104M/104M [00:01<00:00, 97.6MB/s] \u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "Decoder.pt: 100% 104M/104M [00:01<00:00, 80.2MB/s]\n",
+            "Fetching 12 files:  25% 3/12 [00:01<00:04,  2.15it/s]\n",
+            "\n",
+            "GPT.pt:  19% 168M/901M [00:01<00:04, 154MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  22% 199M/901M [00:01<00:04, 174MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  26% 231M/901M [00:01<00:03, 191MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  29% 262M/901M [00:01<00:03, 200MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  31% 283M/901M [00:01<00:03, 193MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  35% 315M/901M [00:02<00:02, 205MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  38% 346M/901M [00:02<00:02, 208MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  41% 367M/901M [00:02<00:02, 203MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  43% 388M/901M [00:02<00:02, 203MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  45% 409M/901M [00:02<00:02, 204MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  49% 440M/901M [00:02<00:02, 213MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  52% 472M/901M [00:02<00:02, 203MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  56% 503M/901M [00:03<00:01, 207MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  59% 535M/901M [00:03<00:01, 212MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  63% 566M/901M [00:03<00:01, 213MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  66% 598M/901M [00:03<00:01, 220MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  70% 629M/901M [00:03<00:01, 224MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  73% 661M/901M [00:03<00:01, 223MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  77% 692M/901M [00:03<00:00, 229MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  80% 724M/901M [00:03<00:00, 240MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  84% 755M/901M [00:04<00:00, 232MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  87% 786M/901M [00:04<00:00, 230MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  91% 818M/901M [00:04<00:00, 227MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt:  94% 849M/901M [00:04<00:00, 236MB/s]\u001b[A\u001b[A\n",
+            "\n",
+            "GPT.pt: 100% 901M/901M [00:04<00:00, 189MB/s]\n",
+            "Fetching 12 files: 100% 12/12 [00:04<00:00,  2.44it/s]\n",
+            "INFO:ChatTTS.core:use cuda:0\n",
+            "INFO:ChatTTS.core:vocos loaded.\n",
+            "INFO:ChatTTS.core:dvae loaded.\n",
+            "INFO:ChatTTS.core:gpt loaded.\n",
+            "INFO:ChatTTS.core:decoder loaded.\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/ChatTTS_colab/webui_mix.py\", line 46, in <module>\n",
+            "    chat = load_chat_tts_model(source=args.source, local_path=args.local_path)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/ChatTTS_colab/tts_model.py\", line 25, in load_chat_tts_model\n",
+            "    chat.load_models(source=source, force_redownload=force_redownload, custom_path=local_path, compile=False)\n",
+            "  File \"/content/ChatTTS_colab/ChatTTS/core.py\", line 81, in load_models\n",
+            "    self._load(**{k: os.path.join(download_path, v) for k, v in OmegaConf.load(os.path.join(download_path, 'config', 'path.yaml')).items()}, **kwargs)\n",
+            "  File \"/content/ChatTTS_colab/ChatTTS/core.py\", line 144, in _load\n",
+            "    tokenizer = torch.load(tokenizer_path, map_location='cpu')\n",
+            "                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/torch/serialization.py\", line 1470, in load\n",
+            "    raise pickle.UnpicklingError(_get_wo_message(str(e))) from None\n",
+            "_pickle.UnpicklingError: Weights only load failed. This file can still be loaded, to do so you have two options, \u001b[1mdo those steps only if you trust the source of the checkpoint\u001b[0m. \n",
+            "\t(1) In PyTorch 2.6, we changed the default value of the `weights_only` argument in `torch.load` from `False` to `True`. Re-running `torch.load` with `weights_only` set to `False` will likely succeed, but it can result in arbitrary code execution. Do it only if you got the file from a trusted source.\n",
+            "\t(2) Alternatively, to load with `weights_only=True` please check the recommended steps in the following error message.\n",
+            "\tWeightsUnpickler error: Unsupported global: GLOBAL transformers.models.bert.tokenization_bert_fast.BertTokenizerFast was not an allowed global by default. Please use `torch.serialization.add_safe_globals([BertTokenizerFast])` or the `torch.serialization.safe_globals([BertTokenizerFast])` context manager to allowlist this global if you trust this class/function.\n",
+            "\n",
+            "Check the documentation of torch.load to learn more about types accepted by default with weights_only https://pytorch.org/docs/stable/generated/torch.load.html.\n"
+          ]
+        }
+      ]
     }
   ]
 }
