使用 Colab 创建而成

--- a/chattts_webui_mix.ipynb
+++ b/chattts_webui_mix.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/samjoeyang/ChatTTS_colab/blob/main/chattts_webui_mix.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -58,44 +69,22 @@
         "!python webui_mix.py --share\n"
       ],
       "metadata": {
-        "id": "hNDl-5muR77-"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!python webui_mix.py --share"
-      ],
-      "metadata": {
-        "id": "fItwk80CIITH",
-        "outputId": "02aa5370-d61f-4b27-bc8b-31b797bcf88b",
+        "id": "hNDl-5muR77-",
+        "outputId": "bbf9dc76-7451-4962-c918-734cbb78db3b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2025-03-19 06:45:15.507079: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-            "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-            "E0000 00:00:1742366715.529673    4508 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-            "E0000 00:00:1742366715.536025    4508 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-            "2025-03-19 06:45:15.558281: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-            "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-            "Loading ChatTTS model...\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/content/ChatTTS_colab/webui_mix.py\", line 46, in <module>\n",
-            "    chat = load_chat_tts_model(source=args.source, local_path=args.local_path)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/content/ChatTTS_colab/tts_model.py\", line 25, in load_chat_tts_model\n",
-            "    chat.load_models(source=source, force_redownload=force_redownload, custom_path=local_path, compile=False)\n",
-            "    ^^^^^^^^^^^^^^^^\n",
-            "AttributeError: 'Chat' object has no attribute 'load_models'. Did you mean: 'download_models'?\n"
+            "/content\n",
+            "/content/ChatTTS_colab\n",
+            "/content/ChatTTS_colab/ChatTTS\n",
+            "/content/ChatTTS_colab\n"
           ]
         }
       ]
