--- a/chattts_webui_mix.ipynb
+++ b/chattts_webui_mix.ipynb
@@ -65,6 +65,7 @@
         "!mv ChatTTS abc\n",
         "!mv abc/* /content/ChatTTS_colab/\n",
         "!pip install -q omegaconf vocos vector_quantize_pytorch gradio cn2an pypinyin openai jieba WeTextProcessing python-dotenv pybase16384\n",
+        "!apt-get update -qq && apt-get install -y -qq ffmpeg",
         "# 启动 Gradio 有公网地址\n",
         "!python webui_mix.py --share\n"
       ],
@@ -77,16 +78,7 @@
       },
       "execution_count": null,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content\n",
-            "/content/ChatTTS_colab\n",
-            "/content/ChatTTS_colab/ChatTTS\n",
-            "/content/ChatTTS_colab\n"
-          ]
-        }
+        
       ]
     }
   ]
